[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprite/coin/coin1.png" type="Texture" id=1]
[ext_resource path="res://ui/UI.gd" type="Script" id=2]
[ext_resource path="res://resources/game_theme.tres" type="Theme" id=3]
[ext_resource path="res://resources/font_64.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 1032.0
margin_bottom = 608.0
color = Color( 0.639216, 0.458824, 0.533333, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
light_mask = 513
margin_top = 8.0
margin_right = 1024.0
margin_bottom = 48.0
theme = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 476.0
margin_top = 2.0
margin_right = 547.0
margin_bottom = 38.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 36.0
texture = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/CenterContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 40.0
margin_bottom = 36.0
custom_constants/separation = 4
custom_styles/separator = SubResource( 2 )

[node name="score_label" type="Label" parent="CanvasLayer/CenterContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 71.0
margin_bottom = 36.0
text = "0"

[node name="button_container" type="CenterContainer" parent="."]
margin_top = 288.0
margin_right = 1024.0
margin_bottom = 328.0

[node name="MarginContainer" type="MarginContainer" parent="button_container"]
margin_left = 372.0
margin_right = 651.0
margin_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="button_container/MarginContainer"]
margin_right = 279.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="button_container/MarginContainer/PanelContainer"]
margin_right = 279.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="button_container/MarginContainer/PanelContainer/MarginContainer"]
margin_right = 279.0
margin_bottom = 40.0
text = "START GAME"

[node name="game_over_container" type="MarginContainer" parent="."]
visible = false
margin_left = 288.0
margin_top = 128.0
margin_right = 744.0
margin_bottom = 200.0

[node name="Panel" type="PanelContainer" parent="game_over_container"]
margin_right = 456.0
margin_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="game_over_container/Panel"]
margin_right = 456.0
margin_bottom = 72.0

[node name="game_over" type="Label" parent="game_over_container/Panel/MarginContainer"]
margin_right = 456.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 4 )
text = "GAME OVER"

[node name="game_over_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="button_container/MarginContainer/PanelContainer/MarginContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="game_over_timer" to="." method="_on_game_over_timer_timeout"]
